5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1723_2503.log
== TEST (2019-05-13 13:39:40) 
-- CODE:
v = int(input("quantidade de repeticoes: "))

i = 0
while(i<v):
	soma += 4*(((1)**i)/(2*i+1))
	i = i + 1

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma += 4*(((1)**i)/(2*i+1))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:40:30) 
-- CODE:
v = int(input("quantidade de repeticoes: "))
soma = 0
i = 0
while(i<v):
	soma += 4*(((1)**i)/(2*i+1))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
13.75233433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:41:16) 
-- CODE:
v = int(input("quantidade de repeticoes: "))
soma = 0
i = 0
while(i<v):
	soma = 4*(((1)**i)/(2*i+1))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.0
2 1.3333333333333333
3 0.8
4 0.5714285714285714
5 0.4444444444444444
6 0.36363636363636365
7 0.3076923076923077
8 0.26666666666666666
9 0.23529411764705882
10 0.21052631578947367
11 0.19047619047619047
12 0.17391304347826086
13 0.16
14 0.14814814814814814
15 0.13793103448275862
16 0.12903225806451613
17 0.12121212121212122
18 0.11428571428571428
19 0.10810810810810811
20 0.10256410256410256
21 0.0975609756097561
22 0.09302325581395349
23 0.08888888888888889
24 0.0851063829787234
25 0.08163265306122448
26 0.0784313725490196
27 0.07547169811320754
28 0.07272727272727272
29 0.07017543859649122
30 0.06779661016949153
31 0.06557377049180328
32 0.06349206349206349
33 0.06153846153846154
34 0.05970149253731343
35 0.057971014492753624
36 0.056338028169014086
37 0.0547945205479452
38 0.05333333333333334
39 0.05194805194805195
40 0.05063291139240506
41 0.04938271604938271
42 0.04819277108433735
43 0.047058823529411764
44 0.04597701149425287
45 0.0449438202247191
46 0.04395604395604396
47 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:42:26) 
-- CODE:
v = int(input("quantidade de repeticoes: "))
soma = 0
i = 0
while(i<v):
	soma += 4*(((-1)**i)/(2*i+1))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.0
2 2.666666666666667
3 3.466666666666667
4 2.8952380952380956
5 3.3396825396825403
6 2.9760461760461765
7 3.2837384837384844
8 3.017071817071818
9 3.2523659347188767
10 3.0418396189294032
11 3.232315809405594
12 3.058402765927333
13 3.2184027659273333
14 3.0702546177791854
15 3.208185652261944
16 3.079153394197428
17 3.200365515409549
18 3.0860798011238346
19 3.1941879092319425
20 3.09162380666784
21 3.189184782277596
22 3.0961615264636424
23 3.1850504153525314
24 3.099944032373808
25 3.1815766854350325
26 3.1031453128860127
27 3.1786170109992202
28 3.1058897382719475
29 3.1760651768684385
30 3.108268566698947
31 3.1738423371907505
32 3.110350273698687
33 3.1718887352371485
34 3.112187242699835
35 3.1701582571925884
36 3.1138202290235744
37 3.1686147495715193
38 3.115281416238186
39 3.167229468186238
40 3.116596556793833
41 3.1659792728432157
42 3.117786501758878
43 3.1648453252882898
44 3.118868313794037
45 3.163812134018756
46 3.1198560900627124
47 3.1628668427508844
48 3.120761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:42:45) 
-- CODE:
v = int(input("quantidade de repeticoes: "))
soma = 0
i = 0
while(i<v):
	soma += 4*(((-1)**i)/(2*i+1))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- EXECUTION TIME:
0.298641
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
1 4.0
2 2.666666666666667
3 3.466666666666667
4 2.8952380952380956
5 3.3396825396825403
6 2.9760461760461765
7 3.2837384837384844
8 3.017071817071818
9 3.2523659347188767
10 3.0418396189294032
11 3.232315809405594
12 3.058402765927333
13 3.2184027659273333
14 3.0702546177791854
15 3.208185652261944
16 3.079153394197428
17 3.200365515409549
18 3.0860798011238346
19 3.1941879092319425
20 3.09162380666784
21 3.189184782277596
22 3.0961615264636424
23 3.1850504153525314
24 3.099944032373808
25 3.1815766854350325
26 3.1031453128860127
27 3.1786170109992202
28 3.1058897382719475
29 3.1760651768684385
30 3.108268566698947
31 3.1738423371907505
32 3.110350273698687
33 3.1718887352371485
34 3.112187242699835
35 3.1701582571925884
36 3.1138202290235744
37 3.1686147495715193
38 3.115281416238186
39 3.167229468186238
40 3.116596556793833
41 3.1659792728432157
42 3.117786501758878
43 3.1648453252882898
44 3.118868313794037
45 3.163812134018756
46 3.1198560900627124
47 3.1628668427508844
48 3.120761
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
1 4.0
2 2.666666666666667
3 3.466666666666667
4 2.8952380952380956
5 3.3396825396825403
6 2.9760461760461765
7 3.2837384837384844
8 3.017071817071818
9 3.2523659347188767
10 3.0418396189294032
11 3.232315809405594
12 3.058402765927333
13 3.2184027659273333
14 3.0702546177791854
15 3.208185652261944
16 3.079153394197428
17 3.200365515409549
18 3.0860798011238346
19 3.1941879092319425
20 3.09162380666784
21 3.189184782277596
22 3.0961615264636424
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
1 4.0
2 2.666666666666667
3 3.466666666666667
4 2.8952380952380956
5 3.3396825396825403
6 2.9760461760461765
7 3.2837384837384844
8 3.017071817071818
9 3.2523659347188767
10 3.0418396189294032
11 3.232315809405594
12 3.058402765927333
13 3.2184027659273333
14 3.0702546177791854
15 3.208185652261944
3.20818565
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:42:53) 
-- CODE:
v = int(input("quantidade de repeticoes: "))
soma = 0
i = 0
while(i<v):
	soma += 4*(((-1)**i)/(2*i+1))
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.196663
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:32:49) 
-- CODE:
v = int(input("quantidade de repeticoes: "))
soma = 0
i = 0
while(i<v):
	soma += 4*(((-1)**i)/(2*i+1))
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.209233
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
